--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ coreSplashscreen = "1.0.1"
 junit = "4.13.2"
 junitVersion = "1.2.1"
 espressoCore = "3.6.1"
+kotlinxCoroutinesTest = "1.10.2"
 lifecycleRuntimeKtx = "2.8.7"
 activityCompose = "1.10.1"
 composeBom = "2025.04.01"
@@ -15,11 +16,16 @@ navigationCompose = "2.8.9"
 firebaseBom = "33.13.0"
 googleServices = "4.4.2"
 kotlinxSerialization = "1.8.1"
-okHttp3 = "4.11.0"
+datastorePreferences = "1.1.1"
+
+# Network
+okHttp3 = "4.12.0"
 retrofitSerializationConverter = "1.0.0"
 retrofit = "2.11.0"
+
 mongoBOM = "5.5.0"
 bson = "5.5.0"
+gson = "2.11.0"
 
 # build-logic gradle plugins
 androidGradlePlugin = "8.9.2"
@@ -54,6 +60,7 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
@@ -61,10 +68,14 @@ kotlinx-coroutines = { group = "org.jetbrains.kotlinx", name = "kotlinx-coroutin
 kotlin-test = { group = "org.jetbrains.kotlin", name = "kotlin-test", version.ref = "kotlin" }
 
 # Network Calls
+kotlinx-coroutines-test = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-test", version.ref = "kotlinxCoroutinesTest" }
 retrofit = { group = "com.squareup.retrofit2", name = "retrofit", version.ref = "retrofit" }
 kotlinx-serialization = { group = "org.jetbrains.kotlinx", name = "kotlinx-serialization-json", version.ref = "kotlinxSerialization" }
 retrofit-serialization-converter = { group = "com.jakewharton.retrofit", name = "retrofit2-kotlinx-serialization-converter", version.ref = "retrofitSerializationConverter" }
 okHttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHttp3" }
+converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp3" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
 
 # Database Drivers
 mongodb-driver-bom = { group = "org.mongodb", name = "mongodb-driver-bom", version.ref = "mongoBOM" }
@@ -115,7 +126,7 @@ ott-android-library-compose = { id = "ott.android.library.compose" }
 ott-android-hilt = { id = "ott.android.hilt" }
 ott-feature-ui = { id = "ott.feature.ui" }
 ott-jvm-library = { id = "ott.jvm.library" }
-ott-jvm-ktor = { id = "ott.jvm.ktor" }
+ott-jvm-retrofit = { id = "ott.jvm.retrofit" }
 
 [bundles]
 compose = [
@@ -130,4 +141,13 @@ compose = [
 compose-debug = [
     "androidx-ui-tooling",
     "androidx-ui-test-manifest",
+]
+retrofit = [
+    "retrofit",
+    "okHttp3",
+    "okhttp-logging",
+#    "gson",
+#    "converter-gson",
+    "kotlinx-serialization",
+    "retrofit-serialization-converter"
 ]
