--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -17,6 +17,7 @@ firebaseBom = "33.13.0"
 googleServices = "4.4.2"
 kotlinxSerialization = "1.8.1"
 datastorePreferences = "1.1.1"
+androidxSecurityCrypto = "1.0.0"
 
 # Network
 okHttp3 = "4.12.0"
@@ -34,6 +35,9 @@ ksp = "2.1.10-1.0.31"
 room = "2.7.1"
 hilt = "2.56.2"
 hiltAndroidx = "1.2.0"
+
+# Testing
+androidxTest = "1.6.1"
 
 # default config
 projectCompileSdk = "35"
@@ -59,6 +63,10 @@ androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
+androidx-test-core = { group = "androidx.test", name = "core", version.ref = "androidxTest" }
+androidx-test-core-ktx = { group = "androidx.test", name = "core-ktx", version.ref = "androidxTest" }
+androidx-test-rules = { group = "androidx.test", name = "rules", version.ref = "androidxTest" }
+androidx-security-crypto = { group = "androidx.security", name = "security-crypto", version.ref = "androidxSecurityCrypto" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
 datastore-preferences = { module = "androidx.datastore:datastore-preferences", version.ref = "datastorePreferences" }
 androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "navigationCompose" }
