--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,6 +18,7 @@ googleServices = "4.4.2"
 kotlinxSerialization = "1.8.1"
 datastorePreferences = "1.1.1"
 androidxSecurityCrypto = "1.0.0"
+coilCompose = "3.2.0"
 
 # Network
 okHttp3 = "4.12.0"
@@ -84,6 +85,9 @@ okHttp3 = { group = "com.squareup.okhttp3", name = "okhttp", version.ref = "okHt
 converter-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
 okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okHttp3" }
 gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+
+io-coil-compose = { group = "io.coil-kt.coil3", name = "coil-compose", version.ref = "coilCompose" }
+io-coil-network = { group = "io.coil-kt.coil3", name = "coil-network-okhttp", version.ref = "coilCompose" }
 
 # Database Drivers
 mongodb-driver-bom = { group = "org.mongodb", name = "mongodb-driver-bom", version.ref = "mongoBOM" }
@@ -158,4 +162,9 @@ retrofit = [
 #    "converter-gson",
     "kotlinx-serialization",
     "retrofit-serialization-converter"
+]
+
+coil = [
+    "io-coil-compose",
+    "io-coil-network"
 ]
